<resources>
    <string name="app_name">LoveAdoption</string>
    <string name="facebook_app_id">155796575363652</string>
    <string name="fb_login_protocol_scheme">fb155796575363652</string>
    <string name="cancel_login">Se Cancelo El inicio</string>
    <string name="error_login">Ocurrio un error</string>


    <string name="action_sign_in_short">Registro</string>
    <string name="email">Correo</string>
    <string name="minimum_password">Contraseña demasiado corta, ingrese un mínimo de 6 carácteres!</string>
    <string name="auth_failed">Datos Invalidos,Verifique la información</string>
    <string name="change_email">Cambiar Correo</string>
    <string name="change_password">Cambia la contraseña</string>
    <string name="send_password_reset_email">Enviar contraseña,restablecer correo electrónico</string>
    <string name="remove_user">Eliminar usuario</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Registrarse</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre completo</string>
    <string name="btn_login">INICIAR SESIÓN</string>
    <string name="prompt_password">Por favor, introduzca su contraseña</string>
    <string name="btn_link_to_register">¡Registrarse ahora!</string>
    <string name="btn_link_to_login">¿Ya estas registrado?.Acceda aquí</string>
    <string name="title_activity_reset_password">Restablecer contraseña</string>
    <string name="btn_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="btn_reset_password">Restablecer la contraseña</string>
    <string name="btn_back"><![CDATA[<<Atras]]></string>
    <string name="hint_new_email">Nuevo Email</string>
    <string name="btn_change">Cambio</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Retirar</string>
    <string name="btn_sign_out">Desconectar</string>
    <string name="lbl_forgot_password">¿Se te olvidó tu contraseña?</string>
    <string name="forgot_password_msg">Ingrese el correo electrónico registrado para restablecer la contraseña</string>
    <string name="email_id">Identificación de correo</string>
    <string name="firebase_error_login">Error al iniciar sesión en Firebase</string>
    <string name="Continue_Registro">Continue Registro</string>
    <string name="Nombres">Nombres</string>
    <string name="Numero_De_Documento">Numero De  Documento</string>
    <string name="Departamento">Departamento</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Cidudad">Ciudad</string>
    <string name="Correo">Correo</string>
    <string name="Numero_Telefonico">Numero Telefonico</string>
    <string name="Terminar">Terminar</string>
    <string name="Edad">Edad Mascota</string>
    <string name="Color">Color</string>
    <string name="Raza">Raza Mascota</string>
    <string name="RazaMascota">Raza Mascota</string>
    <string name="Clasedemascota">Clase de mascota</string>
    <string name="Cancelar">Cancelar</string>


    <string-array name="TipoDocumento">
        <item>Tipo Documento</item>
        <item>Cedula</item>
        <item>Nit</item>
        <item>Tarjeta identida</item>
    </string-array>

    <string-array name="TipoUsuario">
        <item>Tipo De Usuario</item>
        <item>Usuario</item>
        <item>Fundacion</item>
    </string-array>

    <string-array name="TamañoMascota">
        <item>Pequeña</item>
        <item>Mediana</item>
        <item>Grande</item>
    </string-array>

    <string-array name="TipoMascota">
        <item>Perro</item>
        <item>Gato</item>
    </string-array>

    <string name="title_activity_interfaz_principal">InterfazPrincipal</string>
    <string name="navigation_drawer_open">Abrir el cajon de navegacion</string>
    <string name="navigation_drawer_close">Cerrar el cajon de navegacion</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Encabezado de navegación</string>
    <string name="action_settings">Ajustes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="title_activity_interfaz_principal_usuarios">InterfazPrincipalUsuarios</string>
    <string name="cerrar_secion">Cerrar Secion</string>
    <string name="RegistrarMascotas">Registrar Mascotas</string>
    <string name="BuscarMascotas">Buscar Mascotas</string>
    <string name="nombre_mascota_perdida">Nombre Mascota Perdida</string>
    <string name="descripcion_perdida_lugar_fecha_hora_motivo">Descripcion Perdida (Lugar,fecha,hora,motivo)</string>
    <string name="telefono_contacto">Telefono Contacto</string>
    <string name="crear">Crear</string>


    <string-array name="ActividadEconomica">
        <item>Actividad economica</item>
        <item>Independiente</item>
        <item>Empleado</item>
        <item>Pensionado</item>
        <item>Ama de casa</item>
    </string-array>
    <string name="title_activity_mis_datos_de_adopcion">MisDatosDeAdopcion</string>
    <string name="btn_link_terminos_condiciones">Ver terminos y condiciones</string>
    <string name="Text_soporte">Envìanos tus comentarios, quejas o sugerencias a nuestro correo electrònico</string>
    <string name="btn_Correo_Electronico">soporteloveadoption@gmail.com</string>
    <string name="Redes_Sociales">Nuestras redes sociales</string>
    <string name="Compartir_redes">Compartir</string>
    <string name="Nombre_evento">Nombre del evento</string>
    <string name="Fecha_evento">Fecha del evento</string>
    <string name="Descripcion_evento">Descripcion del evento</string>
    <string name="Lugar_evento">Lugar del evento</string>
    <string name="direccion_de_residencia">Direccion de residencia</string>
    <string name="title_activity_detalle_amplio_solicitudes">DetalleAmplioSolicitudes</string>
    <string name="link">Link del tips</string>
    <string name="titulotip">Titulo del tip</string>
    <string name="Descripciontip">Descripcion del tip</string>
    <string name="Escribatip">Escriba su tip</string>
    <string name="titulostip">Titulo Tip</string>
    <string name="descripciont">Descripcion Tips</string>
    <string name="tituTip">Titulo del Tips</string>


</resources>
