<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccoutActivity.RegistroDatosActivity"
    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="740dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="-10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Continue_Registro"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipo Documento"
            android:textSize="24sp"
            android:textColor="@android:color/black"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Numero_De_Documento"
            android:textSize="24sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/NombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Nombres"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/ApellidoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Apellidos"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/DepartamentoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Departamento"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/CiudadUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Cidudad"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/TelefonoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Numero_Telefonico"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/CorreoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Correo"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/btnTerminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:textSize="24sp"
            tools:text="@string/Terminar"
            android:textColor="@android:color/black"
            android:background="@color/colorAccent"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>