<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/logo"
    tools:context=".AccoutActivity.DatosUsuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="fill"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Continue_Registro"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/FotoPerfilUsuario"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:contentDescription="TODO"
                android:src="@drawable/com_facebook_profile_picture_blank_square" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:entries="@array/TipoDocumento"
                android:textStyle="bold"
                android:spinnerMode="dialog"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/NumeroDocumento"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/Numero_De_Documento"
                android:textStyle="bold"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/NombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:ems="10"
                android:hint="@string/Nombres"
                android:textStyle="bold"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ApellidoUsuario"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:ems="10"
                android:hint="@string/Apellidos"
                android:textStyle="bold"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/DepartamentoUsuario"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:ems="10"
                android:hint="@string/Departamento"
                android:textStyle="bold"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/CiudadUsuario"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:ems="10"
                android:hint="@string/Cidudad"
                android:textStyle="bold"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/TelefonoUsuario"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:ems="10"
                android:hint="@string/Numero_Telefonico"
                android:textStyle="bold"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/CorreoUsuario"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:ems="10"
                android:hint="@string/Correo"
                android:textStyle="bold"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTerminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/Terminar"
                android:shadowColor="#0A0A0A"
                android:shadowDy="2"
                android:shadowDx="2"
                android:shadowRadius="4"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>