<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistaUsuario.CrearMascotaPerdida">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/FotoMascotaPerdida"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="TODO"
                    android:src="@mipmap/logo" />

                <EditText
                    android:id="@+id/txtMascotaPerdida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nombre_mascota_perdida"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtDescripcionPerdida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/descripcion_perdida_lugar_fecha_hora_motivo"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/txtContactoPerdida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telefono_contacto"
                    android:inputType="phone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCrearPerdida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/crear" />

                    <Button
                        android:id="@+id/btnCancelarPerdida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Cancelar" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>

