<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistaFundacion.CrearEventoFundFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/FotoEvento"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="TODO"
            android:background="@drawable/ic_menu_camera" />

        <EditText
            android:id="@+id/txtNombreEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Nombre_evento"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtFechaEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Fecha_evento"
            android:inputType="date" />

        <EditText
            android:id="@+id/txtDescripcionEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Descripcion_evento"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtlugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Lugar_evento"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCrear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Crear" />

            <Button
                android:id="@+id/btnCancelarEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancelar" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>