<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistaFundacion.CrearTipFundacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="313dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtNombretip"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:contentDescription="@string/titulostip"
                    android:ems="10"
                    android:fontFamily="serif"
                    android:inputType="textPersonName"
                    android:text="@string/titulotip" />

                <ImageButton
                    android:id="@+id/fototip"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    tools:src="@tools:sample/avatars" />

                <EditText
                    android:id="@+id/Descripciontip"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/Escribatip"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:text="@string/Descripciontip" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Creartip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Crear" />

            <Button
                android:id="@+id/Cancelartip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancelar" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>