<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistaUsuario.DatosDeAdopcion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Formulario Para Solicitud De Adopcion"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtNombreSolicitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Nombres"
                android:textStyle="bold"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtTelefonoSolicitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Numero_Telefonico"
                android:inputType="phone"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtDireccionSolicitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textStyle="bold"
                android:hint="@string/direccion_de_residencia"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtBarrioSolicitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textStyle="bold"
                android:hint="Barrio"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/SpinnerActivadadSolicitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/checkMascotaSolicitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="A Tenido Mascotas?" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEnviarSolicitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Enviar" />

                <Button
                    android:id="@+id/btnCancelarSolicitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cancelar" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>